LifeTracker/style.css
body {
    margin: 0;
    height: 100dvh;
    background-image: linear-gradient(to bottom right, white, lightgreen);
    overflow: hidden;
    
  }
  
  .gradient-box {
    position: fixed;
    top: 10vh;
    left: 50vw;
    transform: translate(-50%, -50%);
    font-family: 'Anton', sans-serif;
    font-weight: 500;
    position: relative;
    background: 
    linear-gradient(to right, #0d44577c 0%, #17799a00 10%, #17799a00 90%, #0d44577b 100%),
    linear-gradient(to bottom, #0d4557 0%, #177a9a 15%,#177a9a 85%, #0d4557 100%);
    height: 80vh;
    width: 80vw;
    color: white;
    padding: 20px;
    box-sizing: border-box;
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
    display: none;
    flex-direction: column;
    gap: 15px; 
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    z-index: 10;
  }
  
  .corner {
    position: absolute;
    width: 20%; 
    pointer-events: none;
  }
  
  .top-left {
    top: 0;
    left: 0;
    transform: rotate(180deg);
  }
  
  .top-right {
    top: 0;
    right: 0;
    transform: rotate(-90deg);
  }
  
  .bottom-left {
    bottom: 0;
    left: 0;
    transform: rotate(90deg);
  }
  
  .bottom-right {
    bottom: 0;
    right: 0;
    transform: rotate(0deg);
  }
  
  .content {
    padding: 8px;
    z-index: 1; /* Makes sure content sits above corner images */
    text-align: center;
    border-style: solid;
    border-width: 1px;
    border-color: lightblue;
    border-left: #ffffff00;
    border-right: #ffffff00;
  }
  .content2 {
    z-index: 1; /* Makes sure content sits above corner images */
    text-align: center;
    font-size: 12px;
    font-weight: 600;
  }
  .split-text {
    font-size: 10px;
    font-weight: 100;
    width: 95%;
    margin: 0 auto;           /* centers the div horizontally */
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1px 2px;
    box-sizing: border-box;
   
  }
  
  .left-text {
    text-align: left;
  }
  
  .right-text {
    text-align: right;
  }
  button{
    width: 10px;
    height: 10px;
  }
  .warning-text{
    margin-top: 8%;
    font-size: 10px;
    font-weight: 100;
    width: 95%;
    text-align: center;
  }
 #countdown{
    margin-top: -2%;
    font-size: 12px;
    font-weight: 100;
    width: 95%;
    text-align: center;
  }
#cancel{
    position: absolute;
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px;
    top: 0px;
    right: 28px;
}

.progress-box {
    
    top: 10vh;
    left: 50vw;
    transform: translate(-50%, -50%);
    font-family: 'Anton', sans-serif;
    font-weight: 500;
    position: relative;
    background: 
    linear-gradient(to right, rgb(211, 105, 160) 0%, rgba(255, 218, 255, 0.281) 5%, rgba(255, 218, 255, 0.281) 95%, rgb(211, 105, 160) 100%),
    linear-gradient(to bottom, rgb(211, 105, 160) 0%, white 3%,white 97%, rgb(211, 105, 160) 100%);
    height: 80vh;
    width: 80vw;
    color: white;
    padding: 20px;
    box-sizing: border-box;
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
    display: none;
    flex-direction: column;
    gap: 25px; 
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    z-index: 10;
}

.cyan-bar{
    --maincolor: #0ff;
    --lightcolor: rgb(182, 255, 255);
}
.pink-bar{
    --maincolor: #ec90ac;
    --lightcolor: #f0e0e5;
}
.green-bar{
    --maincolor: #7eea7c;
    --lightcolor: #cdf0c9;
}
.white-bar{
    --maincolor: #e4a033;
    --lightcolor: rgb(245, 249, 227);
}
.progress-container {
    text-align: left;
    width: 100%;
    font-family: Arial, sans-serif;
    
  }
  
  .progress-text {
    font-size: 1.2rem;
    color: var(--maincolor);
    text-shadow: 1px 1px 2px black;
    
  }
  
  .progress-bar {
    width: 100%;
    height: 10px;
    border: 3px solid var(--maincolor);
    background-color: #000;
    position: relative;
    box-shadow: 0 0 10px var(--maincolor);
    padding: 1px;
  }
  
  .progress-fill {
    height: 100%;
    width: 0%; /* Set this to whatever percentage you want */
    background-color: var(--lightcolor);
    border-radius: 1px;
  }

#cancelProgress{
    position: absolute;
    color: white;
    text-shadow: 0 0 2px #000000, 0 0 2px #000000, 0 0 3px;
    top: 5px;
    right: 20px;
}
#noGame{
    width: 100%;
}

#uvImage{
    
    padding: 10px;
    background-color: white;
    width: calc(100% - 20px);
    margin-bottom: -3px;
}
th, td {
    border-bottom: 1px solid lightblue;
    
    width: 50px;
  }
 
  table{
    border-bottom: 0px;
    font-size: 15px;
    font-weight: bold;
    background: 
    linear-gradient(to right, lightblue 0%, lightblue 18%, white 18%, white 100%);
    width: 100%;
    border-top: solid gray 3px;
    border-bottom: solid gray 3px;
    
  }
  .redWeather{
    color: red;
  }
  .blueWeather{
    color: darkblue;
  }
  .weatherContainer{
    max-height: 100vh;
    margin-top: 1vh;
    position: fixed;
    border: 5px solid #555;
    border-radius: 10px;
    position: fixed;
    top: 10px;
    left: 50vw;
    transform: translate(-50%);
    display: none;
    width: 95vw;
    flex-direction: column;
    z-index: 10;
    justify-content: center;
    align-items: center;
    background-color: white;
    overflow-y: auto;
    scrollbar-width: none; /* Firefox */
  }
  .weatherContainer::-webkit-scrollbar {
  display: none; /* Safari and Chrome */
}

#topDiv{
    margin-top: 9vw;
    margin-left: 10vw;
    position: relative;
    display: flex;
    width: 90vw;
    
}
.xp-container {
    text-align: left;
    width: 35%;
    font-family: Arial, sans-serif;
    margin-right: 10px;
    
}
.xpImage{
    position: absolute;
    width: 45px;
    z-index: 4;
    top: -55%;
    left: -20px;
    
}
.xp-bar {
    width: 100%;
    height: 15px;
    border: 3px solid #66c6de;
    background-color: #000;
    position: relative;
    box-shadow: 0 0 6px #66c6de;
    padding: 1px;
  }
/* ... */

